<resources>
    <string name="app_name">GeversDimitriNotifier</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="image">Image</string>
    <string name="email">Email</string>
    <string name="already_registered_log_in_here">Already registered? Log in here</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="sign_in">Sign in</string>
    <string name="back_to_registration">back to registration</string>
    <string name="signout">signout</string>
    <string name="notify">Notify</string>
    <string name="contact">Contact</string>
    <string name="message">message</string>
    <string name="type_message">Type message</string>
    <string name="send">send</string>
    <string name="read_privacy_policy">read privacy policy</string>
    <string name="by_using_this_app_you_give_us_permission_to_store_your_user_data_we_will_never_share_these_with_third_parties">By using this app, you give us permission to store your user data. We will never share these with third-parties.</string>
</resources>