<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    tools:context=".auth.RegisterActivity">

    <FrameLayout
        android:id="@+id/fragment_main"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="176dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password_input_registerform"
        app:layout_constraintStart_toStartOf="@+id/register_button_registerform"
        app:layout_constraintTop_toBottomOf="@+id/image_for_upload_registerform">

        <Button
            android:id="@+id/btn_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_weight="0.9"
            android:text="@string/read_privacy_policy"
            android:background="@drawable/image_style"
            android:textColor="@android:color/holo_orange_light" />
    </FrameLayout>

    <TextView
        android:id="@+id/register_title"
        android:layout_width="100dp"
        android:layout_height="34dp"
        android:layout_marginBottom="164dp"
        android:gravity="center_horizontal"
        android:text="@string/register"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/username_edittext_registerform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/password_input_registerform"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:width="250dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/email_input_registerform"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/email_input_registerform"
        app:layout_constraintTop_toBottomOf="@+id/email_input_registerform" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_for_upload_registerform"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:rotation="0"
        android:src="@drawable/image_style"
        android:translationZ="100dp"
        app:civ_border_color="@android:color/holo_blue_dark"
        app:civ_border_width="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/image_upload_button_registerform"
        app:layout_constraintEnd_toEndOf="@+id/image_upload_button_registerform"
        app:layout_constraintStart_toStartOf="@+id/image_upload_button_registerform"
        app:layout_constraintTop_toBottomOf="@+id/register_title" />

    <Button
        android:id="@+id/image_upload_button_registerform"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/image_style"
        android:text="@string/image"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/username_edittext_registerform"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:width="250dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/name"
        android:paddingLeft="20dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_upload_button_registerform" />

    <EditText
        android:id="@+id/email_input_registerform"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:width="250dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="20dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/username_edittext_registerform"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/username_edittext_registerform"
        app:layout_constraintTop_toBottomOf="@+id/username_edittext_registerform" />

    <Button
        android:id="@+id/register_button_registerform"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/button_style"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/password_input_registerform"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/password_input_registerform"
        app:layout_constraintTop_toBottomOf="@+id/password_input_registerform" />

    <TextView
        android:id="@+id/login_link_registerform"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/already_registered_log_in_here"
        android:textColor="@color/browser_actions_bg_grey"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/register_button_registerform"
        app:layout_constraintStart_toStartOf="@+id/register_button_registerform"
        app:layout_constraintTop_toBottomOf="@+id/register_button_registerform" />


</androidx.constraintlayout.widget.ConstraintLayout>